@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+7/28/25: Show super-resolution option for DE only if camera has property
+for it.
+
 7/23/25: Changes to make directions of beam movement on the Fluscreen correct
 when the option for TEM mode when screen down is on in EFETM mode.
 
